newOrigin: renamed course to brujeria & github

--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-title: Brujería y Github
+title: Brujería & Github
 tagline: Aprender comandos de Git y tareas tricky que se pueden hacer con él.
 description: Se creó este curso con el objetivo de enseñar nuevos conceptos, comandos poco usados y tareas muy utiles de Git
 
