--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-title: Brujería & Github
+title: Brujería y Github
 tagline: Aprender comandos de Git y tareas tricky que se pueden hacer con él.
 description: Se creó este curso con el objetivo de enseñar nuevos conceptos, comandos poco usados y tareas muy utiles de Git
 
@@ -90,7 +90,7 @@ steps:
     path: README.md
     body: |
       ```suggestion
-      :stuck_out_tongue_closed_eyes: 
+      :stuck_out_tongue_closed_eyes:
       ```
     position: 3
 
