--- a/config.yml
+++ b/config.yml
@@ -28,50 +28,51 @@ steps:
 #     with: closed-issue.md
 #     data:
 #       nextIssueUrl: '%actions.head_issue.data.html_url%'
-- title: Como usar HEAD
-  description: Que es el puntero `HEAD`?
-  event: issues.closed
-  link: '{{ repoUrl }}/issues/2'
-  actions:
-  - type: createIssue
-    title: Git log
-    body: 03-git-log-issue.md
-    action_id: git_log_issue
-  - type: respond
-    with: closed-issue.md
-    data:
-      nextIssueUrl: '%actions.git_log_issue.data.html_url%'
 
-# - title: Git log
-#   description: Como ver los logs de una manera mas práctica
+# - title: Como usar HEAD
+#   description: Que es el puntero `HEAD`?
 #   event: issues.closed
-#   link: '{{ repoUrl }}/issues/3' 
+#   link: '{{ repoUrl }}/issues/2'
 #   actions:
-#   - type: createPullRequest
-#     title: Stashear cambios 
-#     body: 04-git-stash-pr.md
-#     head: first-content
-#     base: develop
-#     action_id: git_stash_pr
-#   - type: assignRegistrant
-#     issue: '%actions.git_stash_pr.data.number%'
-#   - type: octokit
-#     method: pullRequests.createComment
-#     owner: '%actions.git_stash_pr.data.head.repo.owner.login%'
-#     repo: '%actions.git_stash_pr.data.head.repo.name%'
-#     number: '%actions.git_stash_pr.data.number%'
-#     commit_id: '%actions.git_stash_pr.data.head.sha%'
-#     path: README.md
-#     body: |
-#       ```suggestion
-#       :robot: was here
-#       -
-#       ```
-#     position: 2
+#   - type: createIssue
+#     title: Git log
+#     body: 03-git-log-issue.md
+#     action_id: git_log_issue
 #   - type: respond
-#     with: closed-pr.md
+#     with: closed-issue.md
 #     data:
-#       nextPrUrl: '%actions.git_stash_pr.data.html_url%'
+#       nextIssueUrl: '%actions.git_log_issue.data.html_url%'
+
+- title: Git log
+  description: Como ver los logs de una manera mas práctica
+  event: issues.closed
+  link: '{{ repoUrl }}/issues/3' 
+  actions:
+  - type: createPullRequest
+    title: Stashear cambios 
+    body: 04-git-stash-pr.md
+    head: first-content
+    base: develop
+    action_id: git_stash_pr
+  - type: assignRegistrant
+    issue: '%actions.git_stash_pr.data.number%'
+  - type: octokit
+    method: pullRequests.createComment
+    owner: '%actions.git_stash_pr.data.head.repo.owner.login%'
+    repo: '%actions.git_stash_pr.data.head.repo.name%'
+    number: '%actions.git_stash_pr.data.number%'
+    commit_id: '%actions.git_stash_pr.data.head.sha%'
+    path: README.md
+    body: |
+      ```suggestion
+      :robot: was here
+      -
+      ```
+    position: 2
+  - type: respond
+    with: closed-pr.md
+    data:
+      nextPrUrl: '%actions.git_stash_pr.data.html_url%'
 
 # - title: Stashear cambios
 #   description: Necesito actualizar mi branch sin tener conflictos con los cambios que vengo trabajando.
